force-app/main/default/objects/Failed_Payload__c/Failed_Payload__c.object-meta.xml
<CustomObject>
    <label>Failed Payload</label>
    <nameField>
        <displayFormat>FP-{000000}</displayFormat>
        <label>Payload ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Failed Payloads</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>