force-app/main/default/objects/Failed_Payload__c/fields/AI_Classification__c.field-meta.xml
<CustomField>
    <fullName>AI_Classification__c</fullName>
    <description>AI-determined category of the ingestion failure.</description>
    <label>AI Classification</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Malformed JSON</fullName>
            </value>
            <value>
                <fullName>Authentication Failure</fullName>
            </value>
            <value>
                <fullName>Schema Mismatch</fullName>
            </value>
            <value>
                <fullName>Unknown Entity</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
                <default>true</default>
                <label>Other</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>