force-app/main/default/objects/Failed_Payload__c/fields/Resolution_Strategy__c.field-meta.xml
<CustomField>
    <fullName>Resolution_Strategy__c</fullName>
    <description>AI-suggested steps to resolve the ingestion error.</description>
    <label>Resolution Strategy</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>